force-app/main/default/objects/Due_Diligence_Validation__c/Due_Diligence_Validation__c.object-meta.xml
<CustomObject>
    <description>Allows the Data Integrity, Gift Management, and Prospect Management (including Research) teams to track details about Due Diligence Validations performed on Constituents and Organizations. These validations are performed as a result of both a review of data returned by Dow Jones of a segment of Constituents in crmND as well as a proactive search of donors currently being cultivated for leadership gifts. This would be a first step in ensuring we have some trail of due diligence activity. Editable and viewable only by those with Gift Management and Prospect Management (including research) access.</description>
    <label>Due Diligence Validation</label>
    <nameField>
        <displayFormat>DDV-{000000}</displayFormat>
        <label>Due Diligence Validation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>