force-app/main/default/objects/Due_Diligence_Validation__c/fields/nd_Constituent__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Due Diligence Validations</relationshipLabel>
    <relationshipName>Due_Diligence_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>