force-app/main/default/objects/Due_Diligence_Validation__c/fields/nd_Organization__c.field-meta.xml
<CustomField>
    <fullName>nd_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Due Diligence Validations</relationshipLabel>
    <relationshipName>Due_Diligence_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>