force-app/main/default/objects/Due_Diligence_Validation__c/fields/nd_Validation_Notes__c.field-meta.xml
<CustomField>
    <fullName>nd_Validation_Notes__c</fullName>
    <label>Validation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>