force-app/main/default/objects/Due_Diligence_Validation__c/fields/nd_Validation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>nd_Validation_Outcome__c</fullName>
    <label>Validation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed - Cleared</fullName>
            </value>
            <value>
                <fullName>Reviewed - See Notes and/or Attachments</fullName>
            </value>
            <value>
                <fullName>Reviewed - Do Not Engage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>