force-app/main/default/objects/Due_Diligence_Validation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nd_Constituent__c</columns>
    <columns>nd_Organization__c</columns>
    <columns>nd_Validation_Outcome__c</columns>
    <columns>nd_Validation_Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>